implemented some testing code, migrations, db reset. added change pass functionality, also auto add FY at the year end

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js",
+    "migrate": "node scripts/migrate.js",
+    "seed": "node scripts/seed.js",
+    "gen": "node scripts/generate.js",
+    "reset": "node scripts/reset.js",
+    "init-admin": "node scripts/create-admin.js"
   },
   "keywords": [],
   "author": "",
