--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
-.env".env" 
+# Environment variables
+.env
+.env.*
+
+# Dependencies
+node_modules/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS-specific files
+.DS_Store
+Thumbs.db
