--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # Environment variables
-.env
-.env.*
+backend/.env
 
 # Dependencies
 node_modules/
-
+bbackend/node_modules/
+frontend/node_modules/
 # Logs
 npm-debug.log*
 yarn-debug.log*
