--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,27 @@
 # Environment variables
 backend/.env
+.env
+.env.local
+.env.*.local
+backend/.env*
+frontend/.env*
 
 # Dependencies
 node_modules/
-bbackend/node_modules/
 frontend/node_modules/
+
+# Build outputs
+frontend/dist/
+
 # Logs
+logs/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# OS-specific files
+# Editor/OS files
+.vscode/
+.idea/
 .DS_Store
 Thumbs.db
