--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js",
     "start": "node src/index.js",
+    "postinstall": "npx puppeteer browsers install chrome",
     "migrate": "node scripts/migrate.js",
     "seed": "node scripts/seed.js",
     "gen": "node scripts/generate.js",
